--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "demo": "parcel ./demoSrc/index.html -d demo",
-    "build": "parcel build ./demoSrc/index.html -d demo",
+    "build": "parcel build ./demoSrc/index.html -d demo"
   },
   "author": {
     "name": "Jonny Thaw",
